src/patternfly/components/LogViewer/log-viewer.scss
.pf-c-log-viewer {
  --pf-c-log-viewer--Height: 100%;
  --pf-c-log-viewer--MaxHeight: auto;
  --pf-c-log-viewer--m-line-numbers__index--Display: inline;

  // Header
  --pf-c-log-viewer__header--MarginBottom: var(--pf-global--spacer--sm);

  // Main
  --pf-c-log-viewer__main--BorderWidth: var(--pf-global--BorderWidth--sm);
  --pf-c-log-viewer__main--BorderColor: var(--pf-global--BorderColor--100);

  // Main ::after
  --pf-c-log-viewer--m-line-numbers__main--before--Top: var(--pf-global--spacer--sm);
  --pf-c-log-viewer--m-line-numbers__main--before--Bottom: var(--pf-global--spacer--sm);
  --pf-c-log-viewer--m-line-numbers__main--before--Width: var(--pf-global--BorderWidth--sm);
  --pf-c-log-viewer--m-line-numbers__main--before--BackgroundColor: var(--pf-global--BorderColor--100);

  // Body
  --pf-c-log-viewer__list--PaddingTop: var(--pf-global--spacer--sm);
  --pf-c-log-viewer__list--PaddingBottom: var(--pf-global--spacer--sm);

  // Index
  --pf-c-log-viewer__index--Display: none;
  --pf-c-log-viewer__index--Width: #{pf-size-prem(65px)}; // default width
  --pf-c-log-viewer__index--PaddingRight: var(--pf-global--spacer--xl);
  --pf-c-log-viewer__index--PaddingLeft: var(--pf-global--spacer--lg);
  --pf-c-log-viewer__index--FontFamily: var(--pf-global--FontFamily--monospace);
  --pf-c-log-viewer__index--FontSize: var(--pf-global--FontSize--sm);
  --pf-c-log-viewer__index--Color: var(--pf-global--Color--200);

  // Text
  --pf-c-log-viewer__text--PaddingRight: var(--pf-global--spacer--md);
  --pf-c-log-viewer__text--PaddingLeft: var(--pf-global--spacer--md);
  --pf-c-log-viewer__text--FontFamily: var(--pf-global--FontFamily--monospace);
  --pf-c-log-viewer__text--FontSize: var(--pf-global--FontSize--sm);
  --pf-c-log-viewer__text--Color: var(--pf-global--Color--100);
  --pf-c-log-viewer__list-item--hover--BackgroundColor: var(--pf-global--palette--gold-50);
  --pf-c-log-viewer__list-item--m-match--BackgroundColor: var(--pf-global--palette--gold-50);
  --pf-c-log-viewer__list-item--m-current--BackgroundColor: var(--pf-global--palette--gold-100);

  // Timestamp
  --pf-c-log-viewer__timestamp--FontWeight: var(--pf-global--FontWeight--bold);

  // Toolbar
  --pf-c-log-viewer--c-toolbar--PaddingTop: 0;
  --pf-c-log-viewer--c-toolbar--PaddingBottom: 0;
  --pf-c-log-viewer--c-toolbar__content--PaddingRight: 0;
  --pf-c-log-viewer--c-toolbar__content--PaddingLeft: 0;
  --pf-c-log-viewer--c-toolbar__group--m-toggle-group--spacer: 0;
  --pf-c-log-viewer--c-toolbar__group--m-toggle-group--m-show--spacer: var(--pf-global--spacer--sm);

  display: flex;
  flex-direction: column;
  height: var(--pf-c-log-viewer--Height);
  max-height: var(--pf-c-log-viewer--MaxHeight);

  &.pf-m-wrap-text {
    word-break: break-all;
  }

  &.pf-m-line-numbers {
    --pf-c-log-viewer__index--Display: var(--pf-c-log-viewer--m-line-numbers__index--Display);
  }

  // Nested toolbar
  .pf-c-toolbar {
    --pf-c-toolbar--PaddingTop: var(--pf-c-log-viewer--c-toolbar--PaddingTop);
    --pf-c-toolbar--PaddingBottom: var(--pf-c-log-viewer--c-toolbar--PaddingBottom);
    --pf-c-toolbar__content--PaddingRight: var(--pf-c-log-viewer--c-toolbar__content--PaddingRight);
    --pf-c-toolbar__content--PaddingLeft: var(--pf-c-log-viewer--c-toolbar__content--PaddingLeft);
    --pf-c-toolbar__group--m-toggle-group--spacer: 0;
    --pf-c-toolbar__group--m-toggle-group--m-show--spacer: var(--pf-c-log-viewer--c-toolbar__group--m-toggle-group--m-show--spacer);
  }

  .pf-c-toolbar__content-section {
    flex-wrap: nowrap;
  }

  .pf-c-search-input {
    width: 100%;
  }
}

// Header
.pf-c-log-viewer__header {
  margin-bottom: var(--pf-c-log-viewer__header--MarginBottom);
}

// Main
.pf-c-log-viewer__main {
  display: flex;
  flex: 1 1;
  flex-direction: column;
  min-height: 0;
  border: var(--pf-c-log-viewer__main--BorderWidth) solid var(--pf-c-log-viewer__main--BorderColor);

  // stylelint-disable scss/at-rule-no-unknown
  @at-root.pf-m-line-numbers & {
    position: relative;

    // Divider
    &::before {
      position: absolute;
      top: var(--pf-c-log-viewer--m-line-numbers__main--before--Top);
      bottom: var(--pf-c-log-viewer--m-line-numbers__main--before--Bottom);
      left: var(--pf-c-log-viewer__index--Width); // share this value so JS can update one value rather than two
      width: var(--pf-c-log-viewer--m-line-numbers__main--before--Width);
      content: "";
      background: var(--pf-c-log-viewer--m-line-numbers__main--before--BackgroundColor);
    }
  }
  // stylelint-enable
}

// List
.pf-c-log-viewer__list {
  flex: 1 1;
  min-height: 0;
  padding-top: var(--pf-c-log-viewer__list--PaddingTop);
  padding-bottom: var(--pf-c-log-viewer__list--PaddingBottom);
  overflow: auto;
}

.pf-c-log-viewer__list-item {
  // stylelint-disable scss/at-rule-no-unknown
  @at-root.pf-m-line-numbers & {
    display: grid;
    grid-template-columns: max-content 1fr;
  }
  // stylelint-enable

  &:hover {
    background-color: var(--pf-c-log-viewer__list-item--hover--BackgroundColor);
  }

  &.pf-m-match {
    background-color: var(--pf-c-log-viewer__list-item--m-match--BackgroundColor);
  }

  &.pf-m-current {
    background-color: var(--pf-c-log-viewer__list-item--m-current--BackgroundColor);
  }
}

// Index
.pf-c-log-viewer__index {
  display: var(--pf-c-log-viewer__index--Display);
  width: var(--pf-c-log-viewer__index--Width);
  padding-right: var(--pf-c-log-viewer__index--PaddingRight);
  padding-left: var(--pf-c-log-viewer__index--PaddingLeft);
  font-family: var(--pf-c-log-viewer__index--FontFamily);
  font-size: var(--pf-c-log-viewer__index--FontSize);
  color: var(--pf-c-log-viewer__index--Color);
}

// Text
.pf-c-log-viewer__text {
  padding-right: var(--pf-c-log-viewer__text--PaddingRight);
  padding-left: var(--pf-c-log-viewer__text--PaddingLeft);
  font-family: var(--pf-c-log-viewer__text--FontFamily);
  font-size: var(--pf-c-log-viewer__text--FontSize);
  color: var(--pf-c-log-viewer__text--Color);
}

// Timestamp
.pf-c-log-viewer__timestamp {
  font-weight: var(--pf-c-log-viewer__timestamp--FontWeight);
}

